Sigil 0.5.1 TBA
    - Fix issue 1214: Dictionary files do not include hypen files or GB files.
    - Fix issue 1213: Find and Replace does not save file when F&R is already
      open and searching all HTML files.
    - Remove the ability to use F&R to replace text in BV as it is unfixable in
      its current state.
    - Fix issue 1215: Book View line/column incorrect in status bar.
    - Fix issue 1216: Re-opening a document already in a tab resets the cursor
      position back to the top.
    - Fix issue 1218: F&R cleanup.
    - Fix issue 1212: Remove opf namespace rewriting when opening a file because
      it ended up being more trouble than it was wroth.
    - Fix issue 1188: New Sigil Regex engine crashes when pressing "replace all",
      works fine on pushing "replace" over and over and over again.
    - Implement issue 269: Select more than one item in the Book Browser Column.
    - Implement issues 792: Add Shortcuts for next/previous HTML file with regard
      to reading order, and sync selection in book browser to open tab.
    - Implement issue 1135: New blank section must be automatically selected on book browser.
    - Implement issue 1148: Allow user to change the order of split view so book view or code
      view is first.
    - Implement issue 1168: Add ability to sort HTML files alphanumerically.
    - Implement issue 1174: Add new blank html section should insert section after selected file.
    - Implement issue 1181: Merge Previous when previous file is open in current tab requires
      refresh to see merged data.

Sigil 0.5.0 2012.01.21
    - Implement issue 533 and 1079: allow user to select which level(s) of <h> to include.
    - Fix issue 788: Error saving when the folder the file was in was renamed
      outside Sigil.
    - Fix issue 998: Don't select file extension on rename in book browser.
    - Fix issue 1111: Failure to rename to same name with case change.